--- a/src/Topxia/WebBundle/Resources/translations/messages.en_US.yml
+++ b/src/Topxia/WebBundle/Resources/translations/messages.en_US.yml
@@ -889,11 +889,11 @@ mp3: mp3
 '课程内容版权均归': Copyright
 所有: All
 '友情链接：': 'Links:'
-热门小组: 'Popular groups'
+热门小组: 'Popular Groups'
 最新资讯: 'Latest News'
 学员评价: 'Student reviews'
 还没有评价: 'No review'
-学员动态: 'Student updates'
+学员动态: 'Student Updates'
 个人设置: 'My Account'
 我的教学: 'My Teaching'
 '我的学习': 'My Learning'
@@ -906,11 +906,11 @@ mp3: mp3
 正在直播: 'On live'
 更多直播: More
 在学课程: 'Learning Courses'
-教师：%nickname%: Teacher：%nickname%
+教师：%nickname%: 'Teacher: %nickname%'
 完成%percent%: '%percent% done'
 名师风采: 'Teacher Info'
-去老师主页看看: 'View teacher`s homepage'
-更多教师: 'More teachers'
+去老师主页看看: 'View teacher''s homepage'
+更多教师: 'More Teachers'
 '为了帐号的安全，以及更好的使用体验，请设置您的Email地址。': 'Please setup your mail address to improve the security of your account.'
 现在就去设置: 'Setup now'
 手机端: Mobile
