ClassroomBundle语言串增加

--- a/src/Classroom/ClassroomBundle/Resources/translations/messages.en_US.yml
+++ b/src/Classroom/ClassroomBundle/Resources/translations/messages.en_US.yml
@@ -14,6 +14,9 @@
 '正在加入...': '正在加入...'
 正在创建订单...: 正在创建订单...
 '预览模式无法加入学习%role%': '预览模式无法加入学习%role%'
+'继续学习': '继续学习'
+'立即加入': '立即加入'
+'共有<span>%courseNum%</span>门课程': '共有<span>%courseNum%</span>门课程'
 所属%name%: 所属%name%
 我的话题: 我的话题
 问答帖: 问答帖
@@ -46,9 +49,11 @@
 '，不能完整学习': '，不能完整学习'
 '旁听生只能参与话题讨论，正式学员可以完整地学习所有内容，享受所有教学服务': '旁听生只能参与话题讨论，正式学员可以完整地学习所有内容，享受所有教学服务'
 '立即加入购买': '立即加入购买'
+收费: 收费
 订单名称：: 订单名称：
 订单号：: 订单号：
 '订单价格：': '订单价格：'
+原价：: 原价：
 '全部课程': '全部课程'
 排序：: 排序：
 最新笔记: 最新笔记
@@ -84,7 +89,6 @@
 我的%name%: 我的%name%
 未发布: 未发布
 已学了%day%天: 已学了%day%天
-'继续学习': '继续学习'
 '进入%name%': '进入%name%'
 已学%number%课程: 已学%number%课程
 '共%Count%课': '共%Count%课'
@@ -430,16 +434,12 @@
 '班级(#%classroomId%)不存在，评价失败！': '班级(#%classroomId%)不存在，评价失败！'
 '用户(#%userId%)不存在,评价失败!': '用户(#%userId%)不存在,评价失败!'
 '评价(#%id%)不存在，删除失败！': '评价(#%id%)不存在，删除失败！'
-'删除评价#%id%': '删除评价#%id%'
 参数不正确，更新失败！: 参数不正确，更新失败！
 班级不存在，操作失败。: 班级不存在，操作失败。
 '只有未发布班级可以删除，操作失败。': '只有未发布班级可以删除，操作失败。'
-'班级#%id%永久删除': '班级#%id%永久删除'
 '班级不存在，图标更新失败！': '班级不存在，图标更新失败！'
-'更新课程《%title%》(#%id%)图片': '更新课程《%title%》(#%id%)图片'
 学员不存在，备注失败!: 学员不存在，备注失败!
 '用户(#%id%)不是班级(#%classroomId%)的学员，退出班级失败。': '用户(#%id%)不是班级(#%classroomId%)的学员，退出班级失败。'
-'班级《%title%》(#%classroomId%)，移除学员#%memberId%': '班级《%title%》(#%classroomId%)，移除学员#%memberId%'
 '不能加入未发布班级': '不能加入未发布班级'
 '用户(#%userId%)不存在，加入班级失败！': '用户(#%userId%)不存在，加入班级失败！'
 '该用户(#%userId%)不能成为该班级学员！': '该用户(#%userId%)不能成为该班级学员！'
@@ -453,7 +453,6 @@
 '用户(#%userId%)不是班级(#%classroomId%)的学员，封锁学员失败。': '用户(#%userId%)不是班级(#%classroomId%)的学员，封锁学员失败。'
 '用户(#%userId%)不是该班级(#%classroomId%)的学员，解封学员失败。': '用户(#%userId%)不是该班级(#%classroomId%)的学员，解封学员失败。'
 推荐班级序号只能为数字！: 推荐班级序号只能为数字！
-'取消推荐班级《%title%》(#%id%)': '取消推荐班级《%title%》(#%id%)'
 '未登录用户，无权操作！': '未登录用户，无权操作！'
 '您不是管理员，无权操作！': '您不是管理员，无权操作！'
 '已优惠': '已优惠'
@@ -469,9 +468,15 @@
 您真的要移除该%username%吗？: 您真的要移除该%username%吗？
 移除%username%成功！: 移除%username%成功！
 移除%username%失败，请重试！: 移除%username%失败，请重试！
+指定班级成功: 指定班级成功
+吗？: 吗？
+成功！: 成功！
+失败: 失败
+'真的要删除该班级吗？': '真的要删除该班级吗？'
+'删除成功！': '删除成功！'
 长度为2-30位: 长度为2-30位
 '%title%吗？': '%title%吗？'
 '%title%成功！': '%title%成功！'
-'%title%失败': '%title%失败'
+'%title%失败!': '%title%失败!'
 设置推荐班级操作成功!: 设置推荐班级操作成功!
 设置推荐班级操作失败!: 设置推荐班级操作失败!
