--- a/CHANGELOG
+++ b/CHANGELOG
@@ -4,7 +4,7 @@ CHANGELOG
 优化：录播公开课去除视频片头
 优化：简墨主题公开课模块的显示
 优化：会员课程的显示逻辑
-优化：班级、课程、课时扫码学习的逻辑（扫码仅生效一次）
+优化：班级、课程、课时扫码学习的逻辑（二维码扫描后失效）
 
 7.0.0（2016-08-02）
 新功能：公开课
